add multi param support