@@ -6,7 +6,7 @@
 
     <groupId>cn.treeh</groupId>
     <artifactId>ToNX</artifactId>
-    <version>8</version>
+    <version>11</version>
     <build>
         <plugins>
             <plugin>
@@ -14,8 +14,23 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg><arg>java.base/sun.security=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/jdk.internal.util.jar=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/jdk.internal.misc=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/jdk.internal.perf=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/jdk.internal.loader=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.www=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.jar=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.file=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.util=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.security.action=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.security.util=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.nio=ToNX</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.nio.cs=ToNX</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -24,22 +39,22 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.30.1</version>
+            <version>3.36.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.3.2</version>
+            <version>3.12.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.5</version>
+            <version>2.13.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
-            <version>2.0.1</version>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>commons-dbutils</groupId>
@@ -49,32 +64,42 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.32</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.1</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
-            <version>2.2.2</version>
+            <version>3.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>4.3.10.RELEASE</version>
+            <version>5.3.12</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.10.RELEASE</version>
+            <version>5.3.12</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <version>1.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.21</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
         </dependency>
 
     </dependencies>
